[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
sled = "0.34"
log = "0.4"
structopt = "0.3"
env_logger = "0.9"
[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.2"
walkdir = "2.3"